[tool.poetry]
package-mode = false

[project]
name = "sistema-bancario"
version = "0.1.0"
description = "API Bancária Assíncrona com FastAPI"
authors = [
    {name = "Marcell Santana de Deus", email = "marcellsantana@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]>=0.38.0,<0.39.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.6",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "pydantic-settings>=2.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
